Fixed overwriting of single molecule addition.